<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">NEClient</string>
    <string name="xposed_description" translatable="false">xposed.leewp14.NEClient</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="confirm">Confirm</string>
    <string name="source">Source</string>

    <string name="hint_hide_icon">App icon will be hidden after first launch. \n\nYou may access this UI from Xposed Installer. </string>
    <string name="hint_reboot_setting_changed">Reboot or relaunch NetEase Music for changes to take effect. </string>
    <string name="hint_reboot_not_active">Module not active, kindly activate module and reboot. </string>

    <string name="oversea_mode_title">Overseas Mode</string>
    <string name="oversea_mode_description">Intended for users outside of Mainland China only. </string>

    <string name="dislike_confirm_title">Disable favorite removal confirm</string>
    <string name="dislike_confirm_question">Remove from favorites?</string>

    <string name="prevent_gray_title">Ungrey Song</string>
    <string name="prevent_gray_description">Increase visibility in Night Mode</string>

    <string name="active_now">Activate</string>
    <string name="xposed_installer_not_installed">Xposed Installer not found. </string>
    <string name="pref_general_title">General</string>
    <string name="pref_ui_config_title">UI Configuration</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_module_info_title">Module Info</string>

</resources>