<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/pref_general_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="OVERSEA_MODE"
            android:summary="@string/oversea_mode_description"
            android:title="@string/oversea_mode_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_feature_settings"
        android:title="@string/pref_ui_config_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="DISLIKE_CONFIRM"
            android:singleLine="false"
            android:title="@string/dislike_confirm_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREVENT_GRAY"
            android:summary="@string/prevent_gray_description"
            android:title="@string/prevent_gray_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_module_info"
        android:title="@string/pref_module_info_title">
        <Preference
            android:key="pref_version"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/versionName"
            android:title="@string/pref_version_title" />
        <Preference
            android:key="pref_contributor"
            android:persistent="false"
            android:selectable="false"
            android:summary="bin456789, lee.wp14"
            android:title="Behind the works" />
        <Preference
            android:key="pref_contribute"
            android:summary="Help us by fixing NetEase's API issue now!"
            android:title="I want to help">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://goo.gl/o3oVMS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>